--- a/src/index.css
+++ b/src/index.css
@@ -7,12 +7,17 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #dededb;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@font-face {
+  font-family: 'TheSeasons';
+  src: url('/Fontspring-DEMO-theseasons-reg.otf') format('truetype');
 }
 
 a {
@@ -35,6 +40,7 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  font-family: 'TheSeasons', sans-serif;
 }
 
 button {
